# IMU-Mocap-Development-Public

./: README.md  WindowsInstaller.iss  pyproject.toml  version.py
.github/workflows/: build.yml
Examples/: animate_body.py  animate_body_with_hands.py  animate_body_with_wheelchair.py  animate_body_with_wheelchair_and_hands.py  animate_left_hand.py  animate_right_hand.py  hardware.py  logged_lower_body.py  models.py  stream_body.py  stream_lower_body.py
Examples/imumocap/: __init__.py  link.py  matrix.py  ui.py  viewer.py
Examples/imumocap/solvers/: __init__.py  calibrate.py  floor.py  north.py
IMU Mocap Viewer/Assets/Settings/: DefaultVolumeProfile.asset  URP Global Settings.asset  URP Renderer.asset  URP Settings.asset  UniversalRenderPipelineGlobalSettings.asset
IMU Mocap Viewer/Assets/TextMesh Pro/Shaders/: TMP_Billboard.shader
IMU Mocap Viewer/Assets/Viewer/: Viewer Scene.unity
IMU Mocap Viewer/Assets/Viewer/Editor/: MeshGenerator.cs  SdfGenerator.cs  Viewer.Editor.asmdef
IMU Mocap Viewer/Assets/Viewer/Runtime/: Connection.cs  GlobalSettingBindings.cs  Interaction.cs  Main.cs  PixelScaleUtility.cs  Plotter.cs  Swizzle.cs  Utils.cs  Viewer.Runtime.asmdef
IMU Mocap Viewer/Assets/Viewer/UI/: Setting.prefab
IMU Mocap Viewer/Assets/Viewer/Viewer/: LightingData.asset
IMU Mocap Viewer/Assets/__Plot/: Viewer.unity
IMU Mocap Viewer/Assets/__Plot/Editor/: MeshGenerator.cs
IMU Mocap Viewer/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
TEMP ICONS FOR PHILL/: Icons OG.pdn
imumocap/solvers/: calibrate.py
(+80 files in other folders)
